Thu Dec 15 20:51:27 CET 2005 (tk)
---------------------------------
  * libclamav/sis.c: use mmap() when available

Thu Dec 15 02:52:01 CET 2005 (tk)
---------------------------------
  * libclamav/sis.[ch]: new files
  * libclamav: inital support for SIS files (Symbian OS packages)

Mon Dec 12 19:34:00 CET 2005 (tk)
---------------------------------
  * libclamav: add support for CL_SCAN_ALGO (to control algorithmic detection)
	       Requested by Tomasz Papszun
  * clamscan: --no-algo
  * clamd: ScanAlgo

Sat Dec 10 19:45:48 CET 2005 (tk)
---------------------------------
  * fix some compiler warnings, patch by Stefan Huehner <stefan*huehner.org>

Tue Nov 29 16:31:23 GMT 2005 (trog)
-----------------------------------
  * libclamav/unrar/unrar.c unrarvm.c: #include clamav-config.h

Mon Nov 28 20:45:20 CET 2005 (tk)
---------------------------------
  * configure.in: check for hardware acceleration library (--disable-hwaccel
		  disables the check)

Sat Nov 26 23:32:35 CET 2005 (tk)
---------------------------------
  * libclamav/pe.[ch]: add support for PE32+ executables (used on win64)

Wed Nov 23 11:20:54 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Multipart headers: handle end of header lines that are
				not empty

Tue Nov 22 12:45:35 CET 2005 (tk)
---------------------------------
  * libclamav/zziplib/zzip-zip.c: enable pointer fix on TARGET_CPU_SPARC, too
				  (configure doesn't detect sparc64 in some
				  cases)

Mon Nov 21 22:36:35 CET 2005 (tk)
---------------------------------
  * libclamav/zziplib/zzip-zip.c: fix pointer misalignment problem on sparc64
				  Thanks to Clint Adams <schizo*debian.org>

Mon Nov 21 21:57:29 CET 2005 (tk)
---------------------------------
  * configure.in: check for __attribute__((aligned))

Mon Nov 21 19:29:24 CET 2005 (tk)
---------------------------------
  * clamd/others.h: fix compilation error on systems with INCOMPLETE_CMSG
		    Reported by Fukuda Manabu <fukuda*cri-mw.co.jp>
